# DistributionZoo

./: .bettercodehub.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml
continuous_univariate/: continuous_univariate.hpp
discrete_univariate/: discrete_univariate.hpp
src/: univariate_distributions.hpp
tests/: continuous_univariate_tests.cpp  discrete_univariate_tests.cpp  tests.cpp  tests_main.cpp  zoo_util_tests.cpp
zoo_util/: zoo_util.hpp
